--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -20,7 +20,12 @@
                 </ul>
             </li>
             <li class="language-dropdown">
-                <a id="choses-lang" href="#"><i class="fa fa-users"></i>  TAKIMIM</a>
+                <a id="choses-lang" href="@Url.Action("Detail","Teams")"><i class="fa fa-users"></i>  TAKIMIM</a>
+                <ul id="language-dropdown">
+                </ul>
+            </li>
+            <li class="language-dropdown">
+                <a id="choses-lang" href="@Url.Action("Detail","Profile")"><i class="fa fa-user"></i>  PROFİLİM</a>
                 <ul id="language-dropdown">
                 </ul>
             </li>
