--- a/BisLeagues.Presentation/Views/Teams/Application.cshtml
+++ b/BisLeagues.Presentation/Views/Teams/Application.cshtml
@@ -36,7 +36,7 @@
 @section Heading{
 
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs">
+    <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
             <h2>TAKIM OLUŞTUR</h2>
             <ul class="breadcrumbs">
