--- a/BisLeagues.Presentation/Views/Matches/PastMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/PastMatches.cshtml
@@ -26,7 +26,7 @@
 
 
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs">
+    <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
             <h2>Match Detail</h2>
             <ul class="breadcrumbs">
