--- a/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Matches/UpComingMatches.cshtml
@@ -7,7 +7,7 @@
 @section Heading{
 
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs">
+    <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
             <h2>Gelecek Maçlar</h2>
             <ul class="breadcrumbs">
