--- a/BisLeagues.Presentation/Views/News/Index.cshtml
+++ b/BisLeagues.Presentation/Views/News/Index.cshtml
@@ -9,7 +9,7 @@
 
 
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs">
+    <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
             <h2>Haberler</h2>
             <ul class="breadcrumbs">
