--- a/BisLeagues.Presentation/Views/PointTable/Index.cshtml
+++ b/BisLeagues.Presentation/Views/PointTable/Index.cshtml
@@ -25,7 +25,7 @@
 
 
     <!-- Page Heading & Breadcrumbs  -->
-    <div class="page-heading-breadcrumbs">
+    <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
             <h2>Puan Durumu</h2>
             <ul class="breadcrumbs">
