--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -14,11 +14,11 @@
                         <div class="logo-column p-white">
                             <img class="footer-logo" src="~/Assets/images/footer-logo.png" alt="">
                             <ul class="address-list style-2">
-                                <li><span>Address:</span>1782 Harrison Street  Sun Prairie</li>
-                                <li><span>Phone Number:</span>49 30 47373795</li>
-                                <li><span>Email Address:</span>moin@blindtextgenerator.de</li>
+                                <li><span>Adres:</span>@ViewBag.CompanyAddress</li>
+                                <li><span>Telefon:</span>@ViewBag.CompanyPhone</li>
+                                <li><span>Email Adresi:</span>@ViewBag.CompanyEmail</li>
                             </ul>
-                            <span class="follow-us">follow us </span>
+                            <span class="follow-us">Bizi takip et ! </span>
                             <ul class="social-icons">
                                 <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
@@ -63,7 +63,6 @@
                         </div>
                     </div>*@
                     <!-- Footer Column -->
-    
                 </div>
             </div>
             <!-- Footer columns -->
@@ -73,7 +72,7 @@
         <!-- Copy Rights -->
         <div class="copy-rights">
             <div class="container">
-                <p>© Copyright by <i class="red-color">FineLayers</i> All rights reserved.</p>
+                <p>© Copyright by <i class="red-color">@ViewBag.CompanyName</i> All rights reserved.</p>
                 <a class="back-to-top scrollup" href="#"><i class="fa fa-angle-up"></i></a>
             </div>
         </div>
@@ -86,62 +85,25 @@
     <nav id="menu" class="responive-nav">
         <a class="r-nav-logo" href="home-1.html"><img src="~/Assets/images/logo-1.png" alt=""></a>
         <ul class="respoinve-nav-list">
+            <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
             <li>
-                <a data-toggle="collapse" href="#list-1"><i class="pull-right fa fa-angle-down"></i>Home</a>
-                <ul class="collapse" id="list-1">
-                    <li><a href="home-1.html">Home 1</a></li>
-                    <li><a href="index-2.html">Home 2</a></li>
-                    <li><a href="index-3.html">Home 3</a></li>
+                <a href="@Url.Action("Detail","Teams", new { isMyTeam = true })">Takımım</a>
+            </li>
+            <li class="mega-dropdown">
+                <a href="@Url.Action("Index", "News")">Haberler</a>
+
+            </li>
+            <li>
+                <a href="@Url.Action("UpComingMatches", "Matches")">Maçlar</a>
+                <ul>
+                    <li><a href="@Url.Action("UpComingMatches", "Matches")">Gelecek Maçlar</a></li>
+                    <li><a href="@Url.Action("PastMatches", "Matches")">Geçmiş Maçlar</a></li>
                 </ul>
             </li>
             <li>
-                <a href="about.html">About</a>
+                <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
             </li>
-            <li>
-                <a data-toggle="collapse" href="#list-2"><i class="pull-right fa fa-angle-down"></i>Team</a>
-                <ul class="collapse" id="list-2">
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="team-detail.html">Team Detail</a></li>
-                    <li><a href="team-widthsidebar.html">team widthsidebar</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="gallery.html">Gallery</a>
-            </li>
-            <li>
-                <a href="#">News</a>
-            </li>
-            <li>
-                <a data-toggle="collapse" href="#list-3"><i class="pull-right fa fa-angle-down"></i>Match</a>
-                <ul class="collapse" id="list-3">
-                    <li><a href="match.html">match</a></li>
-                    <li><a href="match-detail.html">match detail</a></li>
-                    <li><a href="match-result.html">match result</a></li>
-                </ul>
-            </li>
-            <li>
-                <a data-toggle="collapse" href="#list-4"><i class="pull-right fa fa-angle-down"></i>Shop</a>
-                <ul class="collapse" id="list-4">
-                    <li><a href="shop.html">shop</a></li>
-                    <li><a href="cart.html">cart</a></li>
-                    <li><a href="shop-detail.html">shop detail</a></li>
-                </ul>
-            </li>
-            <li>
-                <a data-toggle="collapse" href="#list-5"><i class="pull-right fa fa-angle-down"></i>Pages</a>
-                <ul class="collapse" id="list-5">
-                    <li><a href="404.html">404</a></li>
-                    <li><a href="underconstraction.html">underconstraction</a></li>
-                </ul>
-            </li>
-            <li>
-                <a data-toggle="collapse" href="#list-6"><i class="pull-right fa fa-angle-down"></i>Blog</a>
-                <ul class="collapse" id="list-6">
-                    <li><a href="blog.html">blog</a></li>
-                    <li><a href="blog-detail.html">blog detail</a></li>
-                </ul>
-            </li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">İletişim</a></li>
         </ul>
     </nav>
     <!-- Slide Menu -->
