--- a/BisLeagues.Presentation/Views/News/Index.cshtml
+++ b/BisLeagues.Presentation/Views/News/Index.cshtml
@@ -41,7 +41,7 @@
                     <div class="large-post theme-padding-bottom">
                         <!-- Post Img -->
                         <div class="large-post-img">
-                            <img src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto, width = 871, height = 490 })" alt="">
+                            <img src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 871, height = 490 })" alt="">
                             @*<span class="blog-title-batch">Major League Socer</span>*@
                         </div>
                         <!-- Post Img -->
