--- a/BisLeagues.Presentation/Areas/Admin/Views/Match/Create.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Match/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BisLeagues.Presentation.Areas.Admin.Models.ViewModels.CreateMatchViewModel
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Maç Oluştur";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -27,7 +27,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label class="bmd-label-floating">Ev Sahibi Takım</label>
-                                        <select class="form-control" name="home" id="home" data-style="btn btn-link">
+                                        <select class="form-control" name="homeId" id="homeId" data-style="btn btn-link">
                                             <option value="0" disabled selected>Ev sahibi takımı seçiniz.</option>
                                             @foreach (var team in Model.Teams)
                                             {
@@ -41,7 +41,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label class="bmd-label-floating">Deplasman Takım</label>
-                                        <select class="form-control" name="away" id="away" data-style="btn btn-link">
+                                        <select class="form-control" name="awayId" id="awayId" data-style="btn btn-link">
                                             <option value="0" disabled selected>Deplasman takımı seçiniz.</option>
                                             @foreach (var team in Model.Teams)
                                             {
@@ -51,13 +51,17 @@
                                     </div>
                                 </div>
                             </div>
+                            <label class="bmd-label-floating">Maç Tarihi</label>
                             <div class="row">
-                                <div class="col-md-12">
+                                <div class="col-md-1">
                                     <div class="form-group">
-                                        <label class="bmd-label-floating">Maç Tarihi</label>
-                                        <input type="text" class="form-control" value="" />
+                                        <input type="date" name="matchDate" id="matchDate" class="form-control" value="31.12.2019" />
                                     </div>
-
+                                </div>
+                                <div class="col-md-1">
+                                    <div class="form-group">
+                                        <input type="text" name="matchHour" id="matchHour" class="form-control" value=" 21:00" />
+                                    </div>
                                 </div>
                             </div>
 
