--- a/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -41,26 +41,14 @@
                 <ul class="nav">
                     <li class="nav-item " id="menuCustomerCreate">
                         <a class="nav-link" href="@Url.Action("Create", "Match")">
-                            <i class="material-icons">persons</i>
+                            <i class="material-icons">sports_soccer</i>
                             <p>Maç Oluştur</p>
                         </a>
                     </li>
-                    <li class="nav-item " id="menuCarCreate">
-                        <a class="nav-link" href="@Url.Action("Create", "Car")">
-                            <i class="material-icons">directions_car</i>
-                            <p>Araç Oluştur</p>
-                        </a>
-                    </li>
                     <li class="nav-item " id="menuCaseIndex">
-                        <a class="nav-link" href="@Url.Action("Index", "Case")">
+                        <a class="nav-link" href="@Url.Action("List", "Match")">
                             <i class="material-icons">list</i>
-                            <p>Kayıtları Gör</p>
-                        </a>
-                    </li>
-                    <li class="nav-item " id="menuCaseCreate">
-                        <a class="nav-link" href="@Url.Action("Create", "Case")">
-                            <i class="material-icons">build</i>
-                            <p>İşlem Kayıdı Oluştur</p>
+                            <p>Maçları Gör</p>
                         </a>
                     </li>
                 </ul>
